--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,65 @@
-/* Brother 1816 is a commercial font; Plus Jakarta Sans is used as the closest free alternative */
-@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;500;600;700&display=swap');
+/* Brother 1816 — custom font (loaded from public/fonts) */
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Thin.otf") format("opentype");
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Light.otf") format("opentype");
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Regular.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Book.otf") format("opentype");
+  font-weight: 450;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Medium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Extra-Bold.otf") format("opentype");
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: "Brother 1816";
+  src: url("/fonts/Brother-1816-Black.otf") format("opentype");
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
+}
 
 @import "tailwindcss";
 
 @theme {
-  --font-sans: "Plus Jakarta Sans", system-ui, sans-serif;
+  --font-sans: "Brother 1816", system-ui, sans-serif;
 
   /* Brand colors */
   --color-primary: #947550;
@@ -29,7 +84,7 @@
   }
 
   body {
-    font-family: "Plus Jakarta Sans", system-ui, sans-serif;
+    font-family: "Brother 1816", system-ui, sans-serif;
     background-color: #f7f7f7;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
